# hapture

./: .envrc  .gitignore  ChangeLog.org  Makefile  README.org  Shakefile.hs  TODO.org  default.nix  hapture.cabal  release.nix  shell.nix  stack.yaml
.bin/: build
extension/: API.hs  Main.hs  api.js  background.js  common.js  manifest.json  options_api.js
extension/options/: options.html  options.js
extension/popup/: hapture.html  hapture.js
nix/: systemd.nix
server/: App.hs  Config.hs  Logging.hs  Main.hs  Routes.hs
server/Hapture/: Template.hs
server/Hapture/Server/: App.hs  Config.hs  Logging.hs  Routes.hs
src/: API.hs  Lib.hs  Template.hs
src/Data/: Port.hs
src/Hapture/: API.hs  Template.hs
