cabal-version: 1.12
name:           hapture
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/hapture#readme>
homepage:       https://github.com/githubuser/hapture#readme
bug-reports:    https://github.com/githubuser/hapture/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/hapture

common base
  ghc-options: -Wall -Wextra -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends: base >= 4.12 && < 5

common deps-datastructs
  build-depends:
      containers
    , free
    , fused-effects
    , fingertree
    , mtl
    , text
    , transformers
    , unordered-containers
    , vector

common deps-io
  build-depends:
      directory
    , monadIO
    , mwc-random

common commondeps
  import: deps-io, deps-datastructs
  build-depends:
      hashable
    , lens
    , recursion-schemes
    , safe-exceptions
    , singletons
    , servant
    , servant-server

library
  import: base, commondeps
  hs-source-dirs: src
  exposed-modules:
      Lib
  other-modules:
      Paths_possibly

executable hapture
  import: base, commondeps
  main-is: Main.hs
  other-modules: Paths_hapture
  hs-source-dirs: server
  build-depends: hapture

executable hapture-firefox
  import: base, commondeps
  main-is: Main.hs
  other-modules: Paths_hapture
  hs-source-dirs: firefox
  build-depends: hapture

test-suite hapture-test
  type: exitcode-stdio-1.0
  import: base, commondeps
  main-is: Spec.hs
  other-modules: Paths_hapture
  hs-source-dirs: test
  build-depends:
      base >=4.7 && <5
    , hapture
  default-language: Haskell2010
