cabal-version:  2.2
name:           hapture
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/hapture#readme>
homepage:       https://github.com/githubuser/hapture#readme
bug-reports:    https://github.com/githubuser/hapture/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.org
    ChangeLog.org

source-repository head
  type: git
  location: https://github.com/githubuser/hapture

common base
  ghc-options: -Wall -Wextra
  default-language: Haskell2010
  build-depends: base >= 4.12 && < 5

common deps-datastructs
  build-depends:
      containers
    , free
    , fused-effects
    , fingertree
    , mtl
    , text
    , transformers
    , unordered-containers
    , vector

common deps-io
  build-depends:
      directory
    , monadIO
    , mwc-random

common deps-webserver
  build-depends:
    , servant
    , servant-server
    , aeson
    , warp
    , katip

common commondeps
  import: deps-io, deps-datastructs, deps-webserver
  build-depends:
      hashable
    , lens
    , recursion-schemes
    , safe-exceptions
    , singletons
    , orgmode-parse < 0.3

library
  import: base, commondeps
  hs-source-dirs: src
  exposed-modules:
      API
      Template
  other-modules:
      Paths_hapture

executable hapture
  import: base, commondeps
  main-is: Main.hs
  other-modules: Paths_hapture, App, Logging, Routes, Config
  hs-source-dirs: server
  ghc-options: -threaded -rtsopts  -with-rtsopts=-N
  build-depends:
      hapture
    , optparse-applicative
    , optparse-text

executable hapture-firefox
  import: base, commondeps
  main-is: Main.hs
  other-modules: Paths_hapture
  hs-source-dirs: extension
  build-depends: hapture
    , blaze-html
    , servant-js

-- test-suite hapture-test
--   type: exitcode-stdio-1.0
--   import: base, commondeps
--   main-is: Spec.hs
--   other-modules: Paths_hapture
--   hs-source-dirs: test
--   build-depends: hapture
--
