cabal-version:  2.2
name:           hapture
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/hapture#readme>
homepage:       https://github.com/githubuser/hapture#readme
bug-reports:    https://github.com/githubuser/hapture/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.org
    ChangeLog.org

source-repository head
  type: git
  location: https://github.com/githubuser/hapture

common base
  ghc-options: -Wall -Wextra
  default-language: Haskell2010
  build-depends: base >= 4.12 && < 5

common deps-datastructs
  build-depends:
      containers
    , free
    , fused-effects
    , fingertree
    , mtl
    , text
    , transformers
    , unordered-containers
    , vector

common deps-io
  build-depends:
      directory
    , monadIO
    , mwc-random

common deps-webserver
  build-depends:
    , servant
    , servant-server
    , aeson
    , warp
    , katip

common commondeps
  import: deps-io, deps-datastructs, deps-webserver
  build-depends:
      hashable
    , lens
    , recursion-schemes
    , safe-exceptions
    , singletons
    , orgmode-parse < 0.3
    , req >= 3

common ghcjs
  -- We need no-missing-home-modules because cabal and ghcjs do not see that
  -- the modules are listed in other-modules.
  ghc-options:    -threaded -Wall -Wno-missing-home-modules

  -- We use dedupe to make code smaller.
  ghcjs-options: -dedupe
  build-depends:
      file-embed
    , ghcjs-dom >= 0.9
    , ghcjs-base
    , ghcjs-prim



library
  import: base
--        , commondeps
  hs-source-dirs: src
  exposed-modules:
      Hapture.API
      -- Hapture.Template
      Data.Port
  other-modules:
      Paths_hapture
  build-depends:
      hashable
    , lens
    -- , lens
    , monadIO
   -- , recursion-schemes
    , safe-exceptions
    -- , singletons
    -- , orgmode-parse < 0.3
    -- , req >= 3
    , servant
    -- , servant-server
    , aeson
    -- , warp
    -- -- , katip
    -- , containers
    -- -- , free
    -- -- , fused-effects
    -- -- , fingertree
    -- , mtl
    , text
    -- , transformers
    -- , unordered-containers
    -- , vector

executable hapture
  import: base, commondeps
  main-is: Main.hs
  other-modules:
    Paths_hapture
    Hapture.Template
    Hapture.Server.App
    Hapture.Server.Logging
    Hapture.Server.Routes
    Hapture.Server.Config
  hs-source-dirs: server
  ghc-options: -threaded -rtsopts  -with-rtsopts=-N
  build-depends:
      hapture
    , optparse-applicative
    , optparse-text

-- executable hapture-firefox-popup
--   import: base, commondeps, ghcjs
--   main-is: Popup.hs
--   hs-source-dirs: extension
--
-- executable hapture-firefox-options
--   import: base, commondeps, ghcjs
--   main-is: Options.hs
--   hs-source-dirs: extension
--
-- executable hapture-firefox-background
--   import: base, commondeps, ghcjs
--   main-is: Background.hs
--   hs-source-dirs: extension
--

-- executable hapture-firefox-api
--   -- import: base
--   main-is: API.hs
--   hs-source-dirs: extension
--   -- We need no-missing-home-modules because cabal and ghcjs do not see that
--   -- the modules are listed in other-modules.
--   ghc-options: -threaded -Wall -Wno-missing-home-modules
--   cpp-options: -DGHCJS_BROWSER
--
--   -- We use dedupe to make code smaller.
--   ghcjs-options: -dedupe
--   build-depends: hapture
--     , servant-js
--     , text
--     , aeson
--     , hashable
--     , safe-exceptions
--     , blaze-html
--
--     , ghcjs-dom >= 0.9
--     , ghcjs-base
--     , ghcjs-prim
--     , base >= 4.12 && < 5
--   ghc-options: -Wall -Wextra
--   default-language: Haskell2010
--
